# coin-board

./: .env  .gitignore  Cargo.toml  Makefile  README.md  deny.toml  docker-compose.yaml  docker-compose.yml  generate_secret.sh
.github/workflows/: main.yaml  main.yml
helm/: Chart.yaml  values.yaml
helm/cert-manager/: Chart.yaml  values.yaml
helm/cluster-issuer/: Chart.yaml  values.yaml
helm/cluster-issuer/templates/: cluster-issuer.yaml
helm/coin-board/: Chart.yaml  values.yaml
helm/coin-board/templates/coin-board-ui/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
helm/coin-board/templates/mongodb/: service.yaml  stateful-set.yaml
helm/coin-board/templates/rates-api/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
helm/coin-board/templates/rates-exporter/: configmap.yaml  cronjob.yaml
helm/coin-board/values/: dev.yaml  prod.yaml
helm/ingress-controller/: Chart.yaml
helm/monitoring/: Chart.yaml  values.yaml
helm/monitoring/configs/grafana/: datasources.yaml  logs.json
helm/monitoring/configs/loki/: loki-config.yaml
helm/monitoring/configs/prometheus/: prometheus.yaml
helm/monitoring/configs/promtail/: promtail-config.yaml
helm/monitoring/dashboards/: coin-board.json  datasources.yaml
helm/monitoring/templates/grafana/: configmap.yaml  dashboard-config.yaml  datasource-config.yaml  service.yaml  stateful-set.yaml
helm/monitoring/templates/loki/: loki-configmap.yaml  loki-service.yaml  loki-stateful-set.yaml  promatil-configmap.yaml  promtail-daemon-set.yaml
helm/monitoring/templates/prometheus/: cnfigmap.yaml  configmap.yaml  role.yaml  service.yaml  stateful-set.yaml
helm/monitoring/values/: dev.yaml  prod.yaml
helm/templates/coin-board-ui/: configmap.yml  deployment.yml  ingress.yml  service.yml
helm/templates/mongodb/: deployment.yml  persistent-volume-claim.yml  service.yml  stateful-set.yml  storage-class.yml
helm/templates/rates-api/: configmap.yml  deployment.yml  ingress.yml  service.yml
helm/templates/rates-exporter/: configmap.yml  job.yml
helm/values/: dev.yml  prod.yml
migrations/: rates_current_price_index.js  rates_id_index_unique.js
rates-api/: Cargo.toml  Dockerfile
rates-api/src/: domain.rs  domain_impl.rs  endpoints.rs  http_contracts.rs  infrastructure.rs  lib.rs  main.rs  metrics.rs  service.rs  settings.rs
rates-exporter/: Cargo.toml  Dockerfile
rates-exporter/src/: domain.rs  domain_impl.rs  infrastructure.rs  lib.rs  main.rs  service.rs  settings.rs
src/: Cargo.toml  Makefile
src/configs/: rates-api-local.json  rates-exporter-local.json
src/rates-api/: Cargo.toml
src/rates-api/src/: domain.rs  http_contracts.rs  infrastructure.rs  main.rs  service.rs  settings.rs
src/rates-exporter/: Cargo.toml  Dockerfile
src/rates-exporter/src/: domain.rs  domain_impl.rs  infrastructure.rs  main.rs  service.rs  settings.rs
