[package]
name="rates-api"
version="0.0.1"
edition="2021"
license = "MIT"

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
config = "0.14.0"
serde = { version = "1.0.207", features = ["derive"] }
actix-web = "4.9.0"
actix-cors = "0.7.0"
async-trait = "0.1.81"
mongodb = "3.0.1"
dotenvy = "0.15.7"
futures = "0.3.30"
prometheus = "0.13.4"