[package]
name="rates-api"
version="0.0.1"
edition="2021"
license = "MIT"

[dependencies]
async-trait = { workspace = true }
mongodb = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
actix-web = "4.9.0"
actix-cors = "0.7.0"
futures = "0.3.30"
prometheus = "0.13.4"