[package]
name="rates-api"
version="0.0.1"
edition="2021"
license = "MIT"

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
mongodb = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
actix-web = "4.9.0"
actix-cors = "0.7.0"
tracing-actix-web = "0.7.12"
futures = "0.3.30"
prometheus = "0.13.4"