[package]
name="rates-exporter"
version="0.0.1"
edition="2021"
license = "MIT"

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
mongodb = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12.5", features = ["json"] }